@@ -1096,6 +1096,8 @@ package VRML::NodeType;
 						children => [MFNode, [], inputOutput],		# for X3D spec
 						center => [SFVec3f, [0, 0, 0],  initializeOnly],
 						range => [MFFloat, [], initializeOnly],
+						bboxCenter => [SFVec3f, [0, 0, 0], initializeOnly],
+						bboxSize => [SFVec3f, [-1, -1, -1], initializeOnly],
 						__isX3D => [SFInt32, 0, initializeOnly], # 0 = VRML,  1 = X3D
 						_selected =>[FreeWRLPTR,0,initializeOnly],
 					   },"X3DGroupingNode"),
@@ -1106,7 +1108,7 @@ package VRML::NodeType;
 						axisOfRotation => [SFVec3f, [0, 1, 0], inputOutput],
 						children => [MFNode, [], inputOutput],
 						bboxCenter => [SFVec3f, [0, 0, 0], initializeOnly],
-						bboxSize => [SFVec3f, [-1, -1, -1], initializeOnly]
+						bboxSize => [SFVec3f, [-1, -1, -1], initializeOnly],
 					   },"X3DGroupingNode"),
 
 	Collision => new VRML::NodeType("Collision", {
